// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`version basic version (Node-API) 1`] = `
prisma                  : 0.0.0
@prisma/client          : Not found
Current platform        : TEST_PLATFORM
Query Engine (Node-API) : libquery-engine ENGINE_VERSION (at sanitized_path/libquery_engine-TEST_PLATFORM.LIBRARY_TYPE.node)
Migration Engine        : migration-engine-cli ENGINE_VERSION (at sanitized_path/migration-engine-TEST_PLATFORM)
Format Binary           : prisma-fmt ENGINE_VERSION (at sanitized_path/prisma-fmt-TEST_PLATFORM)
Format Wasm             : @prisma/prisma-fmt-wasm CLI_VERSION.ENGINE_VERSION
Default Engines Hash    : ENGINE_VERSION
Studio                  : STUDIO_VERSION
`;

exports[`version version with custom binaries (Node-API) 1`] = `
prisma                  : 0.0.0
@prisma/client          : Not found
Current platform        : TEST_PLATFORM
Query Engine (Node-API) : libquery-engine ENGINE_VERSION (at sanitized_path/libquery_engine-TEST_PLATFORM.LIBRARY_TYPE.node, resolved by PRISMA_QUERY_ENGINE_LIBRARY)
Migration Engine        : migration-engine-cli ENGINE_VERSION (at sanitized_path/migration-engine-TEST_PLATFORM, resolved by PRISMA_MIGRATION_ENGINE_BINARY)
Format Binary           : prisma-fmt ENGINE_VERSION (at sanitized_path/prisma-fmt-TEST_PLATFORM, resolved by PRISMA_FMT_BINARY)
Format Wasm             : @prisma/prisma-fmt-wasm CLI_VERSION.ENGINE_VERSION
Default Engines Hash    : ENGINE_VERSION
Studio                  : STUDIO_VERSION
`;

exports[`version basic version 1`] = `
prisma                : 0.0.0
@prisma/client        : Not found
Current platform      : TEST_PLATFORM
Query Engine (Binary) : query-engine ENGINE_VERSION (at sanitized_path/query-engine-TEST_PLATFORM)
Migration Engine      : migration-engine-cli ENGINE_VERSION (at sanitized_path/migration-engine-TEST_PLATFORM)
Format Binary         : prisma-fmt ENGINE_VERSION (at sanitized_path/prisma-fmt-TEST_PLATFORM)
Format Wasm           : @prisma/prisma-fmt-wasm CLI_VERSION.ENGINE_VERSION
Default Engines Hash  : ENGINE_VERSION
Studio                : STUDIO_VERSION
`;

exports[`version version with custom binaries 1`] = `
prisma                : 0.0.0
@prisma/client        : Not found
Current platform      : TEST_PLATFORM
Query Engine (Binary) : query-engine ENGINE_VERSION (at sanitized_path/query-engine-TEST_PLATFORM, resolved by PRISMA_QUERY_ENGINE_BINARY)
Migration Engine      : migration-engine-cli ENGINE_VERSION (at sanitized_path/migration-engine-TEST_PLATFORM, resolved by PRISMA_MIGRATION_ENGINE_BINARY)
Format Binary         : prisma-fmt ENGINE_VERSION (at sanitized_path/prisma-fmt-TEST_PLATFORM, resolved by PRISMA_FMT_BINARY)
Format Wasm           : @prisma/prisma-fmt-wasm CLI_VERSION.ENGINE_VERSION
Default Engines Hash  : ENGINE_VERSION
Studio                : STUDIO_VERSION
`;
